--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -11,17 +11,144 @@
     <!-- Bootstrap CDN  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">   
     <title>Authentications</title>
     <style>
-        body {
-            font-family: 'Recursive', sans-serif;
-            font-size: larger;
+        @import url("https://fonts.googleapis.com/css2?family=Jost:wght@400;500;600&display=swap");
+        :root{
+            font-size: 100%;
+            font-size: 16px;
+            line-height: 1.5;
+            --primary-blue:#233975;
         }
+        body{
+            padding:0;
+            margin: 0;
+            font-family: 'Montserrat',sans-serif;
+            font-weight: 500;
+        }
+        h1{
+            font-size: 2.25rem;
+            font-weight: 700;
+        }
+        h2{
+            font-size: 1.5rem;
+            font-weight: 700;
+        }
+        a{
+            text-decoration: none;
+            color: black;
+        }
+        a:hover{
+            text-decoration: none;
+        }
+        .small{
+            font-size: 80%;
+            text-align: center;
+        }
+        .split-screen{
+            display: flex;
+                flex-direction: row;
+                height: 100vh;
+            }
+            .left,.right{
+                display: flex;
+                height: auto;
+            }
+            .left{
+                width: 35%;
+            }
+            .right{
+                width: 65%;
+            }
+        .left,.right{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        .left{
+            background: linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0.5)),url('https://img.freepik.com/free-photo/sign-up-register-join-applicant-enroll-enter-membership-concept_53876-101283.jpg?w=740');
+            background-size: cover;
+        }
+        .left.copy{
+            color: white;
+            text-align: center;
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing  :grayscale;
+        }
+        .left p{
+font-weight: 400;
+        }
+        .right.copy{
+            color: black;
+            text-align: center;
+        }
+        .right.copyp{
+            margin: 1.5em 0;
+            font-size: 0.875rem;
+        }
+        .right form{
+            width: 328px;;
+        }
+        form input[type="text"],form input[type="email"],form input[type="password"]{
+            display: block;
+            width: 100%;
+            box-sizing: border-box;
+            border-radius: 8px;
+            border: 1px solid #c4c4c4;
+            padding: 1em;
+            margin-bottom: 1.25rem;
+            font-size: 0.875rem;
+        }
+        label{
+            display: block;
+            margin-bottom: 0.5rem;
+            font-size: 0.75rem;
+        }
+        .input-container.password{
+            position: relative;
+        }
+        .input-container.password i{
+         right: 16px;
+        }
+       /* signup-btn{
+            display: block;
+            width: 100%;
+            background: var(--primary-blue);
+            color: white;
+            font-weight: 700;
+            padding: 1rem;
+            font-size: 0.75rem;
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
 
-        .customborder {
-            border-radius: 2%;
-            border: 2px solid #E95420;
         }
+        .signup-btn :hover{
+background: #2c4893;
+        }*/
+        .google{
+            display: block;
+            width: 100%;
+            background: white;
+            color: black;
+            border: 1PX solid black;
+            border-radius: 8px;
+            font-weight: 700;
+            padding: 1rem;
+            font-size: 0.75rem;
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
+            background: #c1c2c7;
+        }
+        @media screen and (main-width:400px){
+            .splet-screen{
+            display: flex;
+            flex-direction: column;
+        }
+        .left{
+            height: 200px;
+        }
+    }
     </style>
 </head>
 
@@ -53,10 +180,16 @@
     </nav>
     <!-- navbar end  -->
 
-
-    <div class="container">
-        <h1 class="text-center p-3">Register Yourself</h1>
-        <div style="margin: 0 auto;" class="col-12 col-md-6 col-lg-5 p-5 customborder">
+   <div class="split-screen">
+       <div class="left">
+           <section class="copy">
+              <!---<h1>Welcom</h1>
+               <P>Create your own account in our website</P>-->
+           </section>
+       </div>
+    <div class="right">
+      <div class="">
+        <h2 class="copy">Sign up</h2>
 
             <% if(typeof err !='undefined' ){ %>
                 <div class="alert alert-danger alert-dismissible fade show" role="alert">
@@ -66,40 +199,74 @@
                 </div>
                 <% } %>
 
-                    <form action="/signup" method="POST">
+                    <form id="sign-up"action="/signup" method="POST">
                         <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-                        <div class="mb-3">
+                        <div class="input-container email">
                             <label for="email">Enter Your Email</label>
-                            <input type="email" class="form-control form-control-lg" name="email" id="email"
+                            <input  type="email" class="" name="email" id="email"
                                 autocomplete="off" placeholder="Email">
                         </div>
-                        <div class="mb-3">
+                        <div class="input-container name">
                             <label for="username">Choose A Username</label>
-                            <input type="text" class="form-control form-control-lg" name="username" id="username"
+                            <input type="text" name="username" id="username"
                                 autocomplete="off" placeholder="Username">
                         </div>
-                        <div class="mb-3">
+                        <div class="input-container password">
                             <label for="password">Choose A Password</label>
-                            <input type="password" class="form-control form-control-lg" name="password" id="password"
+                            <input type="password"  name="password" id="password"
                                 autocomplete="off" placeholder="Password">
+                         <p id="message" style="color:red;display:none; font-size:80%;">Use password between 8 to 24 characters at least one numeric digit, one uppercase and one lowercase letter and syumbols!!</p>
                         </div>
-                        <div class="mb-3">
+                        <div class="input-container password">
                             <label for="confirmpassword">Confirm Your Password</label>
-                            <input type="password" class="form-control form-control-lg" name="confirmpassword"
+                            <input type="password" name="confirmpassword"
                                 id="confirmpassword" autocomplete="off" placeholder="Confirm Password">
                         </div>
                         <div class="d-grid gap-3 mb-3">
-                            <input type="submit" class="btn btn-lg btn-outline-primary" value="Register">
-                            <a class="btn btn-lg btn-success" href="">Continue With Google</a>
+                            <input type="submit" id="submit" class="signup-btn" value="Sign Up">
+                        <button class="google" ><a class="" href="">Continue With Google</a></button>   
                         </div>
                         <p>Already Registered ? <a class="card-link" href="/login">LOGIN Here</a> </p>
                     </form>
+        
         </div>
+     <!---  <img  style="float:right;width:150px;height:150px;" src="https://img.freepik.com/free-photo/hand-using-laptop-press-screen-search-browsing-internet-online_175201-418.jpg?w=996" alt="image">-->
     </div>
-
+</div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous">
+        </script>
+        <script>
+          let password = document.getElementById("password");
+let submit=document.getElementById("submit");
+password.addEventListener("input", () => {
+      let s = 0;
+    if(password.value.length>= 8 && password.value.length<=24){
+      if(/[A-Z]/.test(password.value)){
+      s++;
+    }
+      if(/[a-z]/.test(password.value)){
+      s++;
+    }
+    if(/[0-9]/.test(password.value)){
+      s++;
+    }
+    if(/[^A-Za-z0-9]/.test(password.value)){
+      s++;
+    }
+  }
+  console.log(s);
+if(s<4){
+document.getElementById("message").style.display = "block";
+document.getElementById("sign-up").method="get";
+}
+if(s==4){
+document.getElementById("message").style.display = "none";
+document.getElementById("sign-up").method="post";	  
+}
+  })
+    </script>
 
 </body>
 
