--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -21,6 +21,41 @@
             line-height: 1.5;
             --primary-blue:#233975;
         }
+		 a {
+    font-family: "Jost", sans-serif;
+    text-transform: uppercase;
+    font-size: 20px;
+    margin-top: 12px;
+    color: #fff;
+    letter-spacing: 3px;
+  }
+  .navbar-brand {
+    margin-left: 20px;
+    font-family: "Jost", sans-serif;
+    font-size: 40px;
+    margin-top: 10px;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+  }
+  nav {
+    height: 70px;
+    display: flex;
+    align-items: center;
+  }
+  .underline:hover {
+    text-decoration: underline;
+  }
+  .img-logo {
+    height: 45px;
+    width: 45px;
+    margin-left: 29px;
+    margin-top: 10px;
+  }
+  .img-logo2 {
+    width: 45px;
+    margin-left: 129px;
+    margin-top: 100px;
+  }
         body{
             padding:0;
             margin: 0;
@@ -111,35 +146,34 @@ font-weight: 400;
         .input-container.password i{
          right: 16px;
         }
-       /* signup-btn{
-            display: block;
-            width: 100%;
-            background: var(--primary-blue);
-            color: white;
-            font-weight: 700;
-            padding: 1rem;
-            font-size: 0.75rem;
-            text-transform: uppercase;
-            letter-spacing: 0.5px;
-
-        }
-        .signup-btn :hover{
-background: #2c4893;
-        }*/
-        .google{
-            display: block;
-            width: 100%;
-            background: white;
-            color: black;
-            border: 1PX solid black;
-            border-radius: 8px;
-            font-weight: 700;
-            padding: 1rem;
-            font-size: 0.75rem;
-            text-transform: uppercase;
-            letter-spacing: 0.5px;
-            background: #c1c2c7;
-        }
+        .google-icon{
+      height: 30px ;
+      width: 30px;
+      margin-left: 10px;
+      margin-right: 20px;
+    }
+    .button-google{
+      height: 50px;
+      background-color:white;
+      color: black;
+      padding-top: 6px;
+      border-style: groove;
+      border-color:rgba(236, 233, 233, 0.692) ;
+      font-size: 90%;
+      text-align: left;
+      border-radius: 6px;
+    }
+    .button-signup{
+      height: 50px;
+      background-color: black;
+      color: white;
+      border-radius: 6px;
+    }
+    .button-signup:hover {
+      background-color: rgba(27, 23, 23, 0.76);
+      color: white;
+      border-radius: 6px;
+    }
         @media screen and (main-width:400px){
             .splet-screen{
             display: flex;
@@ -157,7 +191,12 @@ background: #2c4893;
     <!-- navbar  -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Authentications</a>
+		            <a href="/" style="text-decoration: none; margin-top: 0px;">
+                <img
+                  src="https://cdn-user-icons.flaticon.com/65838/65838186/1646388515191.svg?token=exp=1646389449~hmac=320e8bad594f4a49818739c2a2e67fd7"
+                  alt="LOGO" class="img-logo">
+              </a>
+            <a class="navbar-brand" href="#">LOGO</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -183,8 +222,6 @@ background: #2c4893;
    <div class="split-screen">
        <div class="left">
            <section class="copy">
-              <!---<h1>Welcom</h1>
-               <P>Create your own account in our website</P>-->
            </section>
        </div>
     <div class="right">
@@ -223,14 +260,15 @@ background: #2c4893;
                                 id="confirmpassword" autocomplete="off" placeholder="Confirm Password">
                         </div>
                         <div class="d-grid gap-3 mb-3">
-                            <input type="submit" id="submit" class="signup-btn" value="Sign Up">
-                        <button class="google" ><a class="" href="">Continue With Google</a></button>   
+                        <input type="submit" id="submit" class="button-signup" value="Sign Up">
+                    
+                      
+            <a class="button-google" href="/google"><img class="google-icon" src="https://upload.wikimedia.org/wikipedia/commons/archive/5/53/20210618182605%21Google_%22G%22_Logo.svg">Continue With Google</a>   
                         </div>
                         <p>Already Registered ? <a class="card-link" href="/login">LOGIN Here</a> </p>
                     </form>
         
         </div>
-     <!---  <img  style="float:right;width:150px;height:150px;" src="https://img.freepik.com/free-photo/hand-using-laptop-press-screen-search-browsing-internet-online_175201-418.jpg?w=996" alt="image">-->
     </div>
 </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
