changing the navbar

--- a/views/forgot-password.ejs
+++ b/views/forgot-password.ejs
@@ -16,15 +16,60 @@
 
     <title>Authentications</title>
     <style>
+      
+  a {
+    font-family: "Jost", sans-serif;
+    text-transform: uppercase;
+    font-size: 20px;
+    margin-top: 12px;
+    color: #fff;
+    letter-spacing: 3px;
+  }
+  .navbar-brand {
+    margin-left: 20px;
+    font-family: "Jost", sans-serif;
+    font-size: 40px;
+    margin-top: 10px;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+  }
+  nav {
+    height: 70px;
+    display: flex;
+    align-items: center;
+  }
+  .underline:hover {
+    text-decoration: underline;
+  }
+  .img-logo {
+    height: 45px;
+    width: 45px;
+    margin-left: 29px;
+    margin-top: 10px;
+  }
+  .img-logo2 {
+    width: 45px;
+    margin-left: 129px;
+    margin-top: 100px;
+  }
+  @media screen and (max-width: 768px) {
+    nav {
+      height: 90px;
+    }
+  }
+  .contaner-img {
+    margin: 0%;
+    height: 550px;
+  }
       body {
         font-family:  sans-serif;
         font-size: larger;
-        background-image: url(https://images.pexels.com/photos/917494/pexels-photo-917494.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);
-       
+        background:linear-gradient(to bottom, rgba(255, 0, 0, 0.5), rgba(163, 5, 255, 0.5));
+        
       }
 
       .customborder {
-        border-radius:10%;
+        border-radius:6%;
         border: 1px solid #000000;
       }
     </style>
@@ -32,18 +77,18 @@
 
   <body>
     <!-- navbar  -->
-    <nav class="navbar navbar-expand-lg    >
-      <div class="container-fluid" style="color: rgb(43, 61, 61);">
-        <a class="navbar-brand" href="#">ForgetPassword</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container-fluid">
+        <a href="/" style="text-decoration: none; margin-top: 0px;">
+          <img
+            src="https://cdn-user-icons.flaticon.com/65838/65838186/1646388515191.svg?token=exp=1646389449~hmac=320e8bad594f4a49818739c2a2e67fd7"
+            alt="LOGO" class="img-logo">
+        </a>
+        <a class="navbar-brand name-logo" href="/">logo</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
