--- a/views/login.ejs
+++ b/views/login.ejs
@@ -216,20 +216,14 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
-            <% if(logged){ %>
-            <li class="nav-item">
-              <a class="nav-link" href="/logout">Logout</a>
-            </li>
-            <% }else{ %>
               <li class="nav-item">
-                <a class="nav-link" href="/login">Login</a>
+                <a class="nav-link" href="">Login</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/signup">Signup</a>
               </li>
-              <% } %>
           </ul>
         </div>
       </div>
