choices for address

--- a/views/shop/checkout.ejs
+++ b/views/shop/checkout.ejs
@@ -25,13 +25,37 @@
         <div class="col-md-12">
           <div class="form-group">
             <label for="address">Address</label>
-            <input
-              type="text"
-              id="address"
-              class="form-control"
-              required
-              name="address"
-            />
+            <select id="address" class="form-control" name="address" >
+              <option value="pa">Palestine</option>
+              <option value="jo">Jordan</option>
+              <option value="au">Australia</option>
+              <option value="af">Afghanistan</option>
+              <option value="am">Armenia</option>
+              <option value="ba">Bahrain</option>
+              <option value="ch">China</option>
+              <option value="de">Denmark</option>
+              <option value="eg">Egypt</option>
+              <option value="ca">Canada</option>
+              <option value="usa">USA</option>
+              <option value="fr">France</option>
+              <option value="ge">Germany</option>
+              <option value="ira">Iraq</option>
+              <option value="in">India</option>
+              <option value="ire">Ireland</option>
+              <option value="it">Italy</option>
+              <option value="ind">Indonesia</option>
+              <option value="ja">Japan</option>
+              <option value="kw">Kuwait</option>
+              <option value="le">Lebanon</option>
+              <option value="li">Libya</option>
+              <option value="me">Mexico</option>
+              <option value="ni">Nigeria</option>
+              <option value="om">Oman</option>
+              <option value="qa">Qatar</option>
+              <option value="sy">Syria</option>
+              <option value="tu">Turkey</option>
+              <option value="ye">Yemen</option>
+            </select>
           </div>
         </div>
         <div class="col-md-12">
