Modify the profile page

--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -6,7 +6,20 @@
   border: 1px solid #000000;
   border-radius: 50%;
 }
-
+h3{
+  text-align: center;
+  font-family: "Jost", sans-serif;
+}
+.jost{
+  font-family: "jost", sans-serif;
+}
+.strong{
+   width: 180px; 
+   text-align: center; 
+   margin-left: 450px; 
+   padding: 20px; 
+   padding-top: 10px;
+}
 </style>
 
 
@@ -39,32 +52,38 @@
   <div class="row mt-4">
     <div class="col-md-8 m-auto">
       <% if (orders != null && orders.length > 0) { %>
-      <h3>My orders</h3>
+      <h3>History of your orders</h3>
       <% orders.forEach( order => { %>
-      <div class="card m-3">
+      <div class="card m-3" style="border-radius: 30px; border-color: #000000;">
         <div class="card-body">
           <p class="card-text ">
             <ul class="list-group">
               <% order.cart.items.forEach( item => { %>
-              <li class="list-group-item d-flex justify-content-between align-items-center">
-                <%= item.title %> | <%= item.qty %> Units
-                <span class="badge badge-info badge-pill"><%= item.price %></span>
+              <li class="list-group-item d-flex justify-content-between align-items-center jost"  style="background-color: #ffd0d5e3; font-weight: bold;">
+                <%= item.title %> | <%= item.qty %> Items
+                <span class="badge badge-info badge-pill" style="background-color: #de5b6d;"><%= item.price %></span>
               </li>
               <%}) %>
             </ul>
+            <ul>
+              <li>
+                <div class="card-footer jost strong" style="background-color: #de5b6d;">
+                  <strong style="color:white">Total Price: $<%= order.cart.totalCost %></strong>
+                </div>
+              </li>
+            </ul>
           </p>
         </div>
-        <div class="card-footer">
-          <strong>Total Price: $<%= order.cart.totalCost %></strong>
-        </div>
       </div>
+      <hr class="gradient-style" style="margin: 30px;" />
       <%}) %>
       <%} else { %>
-        <h3 class="text-center" >You have not made any orders yet</h3>
+        <h3 class="text-center jost" >You have not made any orders yet</h3>
       <%} %>
     </div>
   </div>
 </div>
+<img src="/images/profileimage.jpg" alt="profile-image" style="width: 570px; height: 350px; margin-bottom: 0;">
 
   <%- include ../partials/footer %>
 
