--- a/views/shop/checkout.ejs
+++ b/views/shop/checkout.ejs
@@ -1,7 +1,7 @@
 <%- include ../partials/header %> <%- include ../partials/categories-navbar %>
-<div class="container mt-4 mb-5">
+<div class="container">
   <!-- Flash messages -->
-  <div class="row mt-3 mb-3">
+  <div class="row mb-3">
     <div class="col-md-8 m-auto">
       <% if (errorMsg) { %>
       <div id="error" class="alert alert-danger">
@@ -13,13 +13,16 @@
     </div>
   </div>
   <div class="col-md-8 m-auto">
+    <div id="intro">
+      <h> Checkout your order</h>
+    </div>
     <!-- Checkout form -->
-    <form action="/checkout" method="POST" id="checkout-form">
+    <form action="/checkout" method="POST" id="checkout-form" class="checkout-form">
       <div class="row">
         <div class="col-md-12">
           <div class="form-group">
             <label for="card-name">Card Holder Name</label>
-            <input type="text" id="card-name" class="form-control" required />
+            <input type="text" id="card-name" class="form-control" placeholder="Card name" required />
           </div>
         </div>
         <div class="col-md-12">
@@ -70,6 +73,10 @@
       <button id="submit-btn" type="submit" class="btn btn-dark button-style">
         Buy now
       </button>
+      <div class="add">
+        <p class="reverse">Want to add other products before confirming?  </p>
+        <a href="/products" class="return">  Go to add!</a>
+      </div>
     </form>
   </div>
 </div>
@@ -77,4 +84,4 @@
 <script type="text/javascript" src="https://js.stripe.com/v3/"></script>
 <script type="text/javascript" src="javascripts/checkout.js"></script>
 
-<%- include ../partials/footer %>
+<div><%- include ../partials/footer %></div>
