--- a/views/shop/checkout.ejs
+++ b/views/shop/checkout.ejs
@@ -1,3 +1,31 @@
+<style>
+  #intro{
+    color: black;
+    margin-bottom: 27px;
+    text-align: center;
+    font-size: 33px;
+    font-weight: 450;
+  }
+  .checkout-form{
+    border: 2px  rgb(193, 191, 191);
+    border-style: ridge;
+    border-radius: 7px;
+    padding: 30px;
+  }
+  #submit-btn{
+    background-color: #d85d5d;
+    color:white;
+  }
+  .add{
+    margin-top: 30px;
+  }
+  .reverse{
+    display: inline-block;
+  }
+  .return{
+    color: rgb(0, 0, 0);
+  }
+</style>
 <%- include ../partials/header %> <%- include ../partials/categories-navbar %>
 <div class="container">
   <!-- Flash messages -->
