--- a/views/shop/checkout.ejs
+++ b/views/shop/checkout.ejs
@@ -86,6 +86,9 @@
               <option value="sy">Syria</option>
               <option value="tu">Turkey</option>
               <option value="ye">Yemen</option>
+              <option value="ru">Russia</option>
+              <option vlaue="ar">Armenia</option>
+              <option vlaue="kn">	Korea (North)</option>
             </select>
           </div>
         </div>
