add countries in Africa

--- a/views/shop/checkout.ejs
+++ b/views/shop/checkout.ejs
@@ -89,6 +89,9 @@
               <option value="ru">Russia</option>
               <option vlaue="ar">Armenia</option>
               <option vlaue="kn">	Korea (North)</option>
+              <option vlaue="sa">South Africa</option>
+              <option vlaue="li">Libya</option>
+              <option vlaue="su">Sudan</option>
             </select>
           </div>
         </div>
