add countries from Europe

--- a/views/shop/checkout.ejs
+++ b/views/shop/checkout.ejs
@@ -92,6 +92,11 @@
               <option vlaue="sa">South Africa</option>
               <option vlaue="li">Libya</option>
               <option vlaue="su">Sudan</option>
+              <option vlaue="ru">Russia</option>
+              <option vlaue="sp">Spain</option>
+              <option vlaue="sw">Sweden</option>
+              <option vlaue="de">Denmark</option>
+              <option value="ma">Malta</option>
             </select>
           </div>
         </div>
