Modify the footer file

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,60 +1,90 @@
-</div>
-<footer>
 
-<section id="contact" class="mt-5">
-    <div class="row">
-        <div class="col-md-4 col-sm-12 col-xs-12 white-links">
-            <p class="footer-title">About Us</p>
-            <ul>
-                <li>
-                    <a href="/pages/about-us">About Our Store</a>
-                </li>
-                <li>
-                    <a href="/pages/contact-us">Contact Us</a>
-                </li>
-                <li>
-                    <a href="/pages/shipping-policy">Shipping Policy</a>
-                </li>
-                <li>
-                    <a href="/pages/careers">Careers</a>
-                </li>
-            </ul>  
-        </div>
-
-    <div class="col-md-6 col-sm-12 col-xs-12 white-links mb-2">
-        <p class="footer-title">Follow Us</p>
-        <a href="https://facebook.com/" target="_blank">
-            <i class="fa fa-facebook-square" aria-hidden="true"></i>
-            Facebook
-        </a>
-          
-          <a id="profile-link" target="_blank" href="https://instagram.com/">
-           <i class="fa fa-instagram" aria-hidden="true"></i>
-            Instagram
-          </a>
-          
-         <a href="https://twitter.com/" target="_blank">
-           <i class="fa fa-twitter" aria-hidden="true"></i>
-            Twitter
-          </a>
-        
-    </div>
-      
-    </div>
-  </section>
+<style>
+  .c-footer .ft-right .ft-right-payment .bank-img .c-img-con-m {
+      display: inline-block;
+      height: 24px;
+      margin-right: 10px;
+  }
+  img {
+      vertical-align: middle;
+      border-style: none;
+      width: 50px;
+      margin-right: 1px;
+  }
+  .c-img-con-m  {
+      vertical-align: middle;
+      /* border-style: none; */
+      width: 50px;
+      margin-right: 1px;
+      /* top: inherit; */
+       padding-top: 10px; 
+  }
+  .ft-right-payment{
+    padding-top:30px ;
+    margin-left: 100px;
+  }
   
-  <section class="bottom-footer">
-    <div class="row">
-    <div class="col-12 mr-auto">
-      © Talabatak All In One 2022 **This is just a fake ecommerce website. All the products and contact details given are not real.
+  
+  </style>
+  <footer>
+  
+  <section id="contact" class="mt-5">
+  
+    <div class="footer_container" style="align-items: center; justify-content: center;">
+      <a href="/" style="text-decoration: none;">
+        <img
+          src="/images/icons8-W.png"
+          alt="logo" class="img-logo2">
+      </a>
+      <div class="navbar-brand name-logo2">
+        <p class="namelogo" >Talabatak</p>
+      </div>
     </div>
-   </div>
-  </section>
-
-</footer>
-</div>
-
-
-<script src="/javascripts/main.js"></script>
-</body>
-</html>
+    <div class="line">
+    </div>
+      <div class="footer__bottom flex flex-column-mobile">
+          <div class="footer__contact">
+            <p>Talabatak Central Office<br>
+              <span>9999 Najah Street<br>
+                Palestine, Najah national university</span>
+            </p>
+          </div>
+          <div class="footer__contact footer__contact--left">
+            <p>
+              Contact Us (Central Office)<br>
+              P : +1 999-999-9999<br>
+              M : contact@Talabatak.com</p>
+          </div>
+          <div class="footer__icons-box">
+            <ul class="footer__icons flex">
+              <li>
+                <a href="https://www.facebook.com/"><img src="https://cdn-icons-png.flaticon.com/128/174/174848.png" alt="icon-facebook"
+                    class="socials"></a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/"><img src="https://cdn-icons-png.flaticon.com/128/1384/1384060.png" alt="icon-youtube"
+                    class="socials"></a>
+              </li>
+              <li>
+                <a href="https://www.linkdin.com/"><img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="icon-linkdin"
+                    class="socials"></a>
+              </li>
+              <li>
+                <a href="https://www.pinterest.com/"><img src="https://cdn-icons-png.flaticon.com/512/220/220214.png" alt="icon-pinterest"
+                    class="socials"></a>
+              </li>
+              <li>
+                <a href="https://www.instagram.com/"><img src="https://cdn-icons-png.flaticon.com/128/2111/2111463.png" alt="icon-instagram"
+                    class="socials"></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+  <div class="ft-right-payment" ><h6 tabindex="0" style="opacity: 0.5;">WE ACCEPT</h6> <div tabindex="0" role="contentinfo" class="bank-img" aria-label="We accept PayPal, Visa, Mastercard, Maestro, and more."><img aria-hidden="true" tabindex="-1" data-src="//img.ltwebstatic.com/images3_pi/2021/03/09/161528368123dd7a35ad8708b0dfc74b3630526891.png" class="c-img-con-m j-verlok-lazy loaded" data-lazy-src="//img.ltwebstatic.com/images3_pi/2021/03/09/161528368123dd7a35ad8708b0dfc74b3630526891.png" src="//img.ltwebstatic.com/images3_pi/2021/03/09/161528368123dd7a35ad8708b0dfc74b3630526891.png" data-was-processed="true"><img aria-hidden="true" tabindex="-1" data-src="//img.ltwebstatic.com/images2_pi/2018/06/06/15282732803587566708.png" class="c-img-con-m j-verlok-lazy loaded" data-lazy-src="//img.ltwebstatic.com/images2_pi/2018/06/06/15282732803587566708.png" src="//img.ltwebstatic.com/images2_pi/2018/06/06/15282732803587566708.png" data-was-processed="true"><img aria-hidden="true" tabindex="-1" data-src="//img.ltwebstatic.com/images2_pi/2018/06/06/15282732983375743706.png" class="c-img-con-m j-verlok-lazy loaded" data-lazy-src="//img.ltwebstatic.com/images2_pi/2018/06/06/15282732983375743706.png" src="//img.ltwebstatic.com/images2_pi/2018/06/06/15282732983375743706.png" data-was-processed="true"><img aria-hidden="true" tabindex="-1" data-src="//img.ltwebstatic.com/images2_pi/2018/06/06/1528273036537082707.png" class="c-img-con-m j-verlok-lazy loaded" data-lazy-src="//img.ltwebstatic.com/images2_pi/2018/06/06/1528273036537082707.png" src="//img.ltwebstatic.com/images2_pi/2018/06/06/1528273036537082707.png" data-was-processed="true"><img aria-hidden="true" tabindex="-1" data-src="//img.ltwebstatic.com/images2_pi/2018/06/06/15282731342688549608.png" class="c-img-con-m j-verlok-lazy loaded" data-lazy-src="//img.ltwebstatic.com/images2_pi/2018/06/06/15282731342688549608.png" src="//img.ltwebstatic.com/images2_pi/2018/06/06/15282731342688549608.png" data-was-processed="true"><img aria-hidden="true" tabindex="-1" data-src="//img.ltwebstatic.com/images2_pi/2018/06/06/1528273151799711689.png" class="c-img-con-m j-verlok-lazy loaded" data-lazy-src="//img.ltwebstatic.com/images2_pi/2018/06/06/1528273151799711689.png" src="//img.ltwebstatic.com/images2_pi/2018/06/06/1528273151799711689.png" data-was-processed="true"><img aria-hidden="true" tabindex="-1" data-src="//img.ltwebstatic.com/images3_pi/2021/02/05/161250863025fd3f042cab4a0148630b1708a6aefd.webp" class="c-img-con-m j-verlok-lazy loaded" data-lazy-src="//img.ltwebstatic.com/images3_pi/2021/02/05/161250863025fd3f042cab4a0148630b1708a6aefd.webp" src="//img.ltwebstatic.com/images3_pi/2021/02/05/161250863025fd3f042cab4a0148630b1708a6aefd.webp" data-was-processed="true"><img aria-hidden="true" tabindex="-1" data-src="//img.ltwebstatic.com/images3_pi/2021/02/05/161250868370a001fbd452127bffec8e8ab4488112.webp" class="c-img-con-m j-verlok-lazy loaded" data-lazy-src="//img.ltwebstatic.com/images3_pi/2021/02/05/161250868370a001fbd452127bffec8e8ab4488112.webp" src="//img.ltwebstatic.com/images3_pi/2021/02/05/161250868370a001fbd452127bffec8e8ab4488112.webp" data-was-processed="true"><img aria-hidden="true" tabindex="-1" data-src="//img.ltwebstatic.com/images2_pi/2018/06/06/15282731651043358291.png" class="c-img-con-m j-verlok-lazy loaded" data-lazy-src="//img.ltwebstatic.com/images2_pi/2018/06/06/15282731651043358291.png" src="//img.ltwebstatic.com/images2_pi/2018/06/06/15282731651043358291.png" data-was-processed="true"><img aria-hidden="true" tabindex="-1" data-src="//img.ltwebstatic.com/images3_pi/2020/12/04/160707548502d822d136d21e8166243abb60b15c41.png" class="c-img-con-m j-verlok-lazy loaded" data-lazy-src="//img.ltwebstatic.com/images3_pi/2020/12/04/160707548502d822d136d21e8166243abb60b15c41.png" src="//img.ltwebstatic.com/images3_pi/2020/12/04/160707548502d822d136d21e8166243abb60b15c41.png" data-was-processed="true"><img aria-hidden="true" tabindex="-1" data-src="//img.ltwebstatic.com/images2_pi/2018/06/06/15282733431754785346.png" class="c-img-con-m j-verlok-lazy loaded" data-lazy-src="//img.ltwebstatic.com/images2_pi/2018/06/06/15282733431754785346.png" src="//img.ltwebstatic.com/images2_pi/2018/06/06/15282733431754785346.png" data-was-processed="true"><img aria-hidden="true" tabindex="-1" data-src="//img.ltwebstatic.com/images3_pi/2019/11/04/15728337019856d004cc3b6372a539162a6178c956.png" class="c-img-con-m j-verlok-lazy loaded" data-lazy-src="//img.ltwebstatic.com/images3_pi/2019/11/04/15728337019856d004cc3b6372a539162a6178c956.png" src="//img.ltwebstatic.com/images3_pi/2019/11/04/15728337019856d004cc3b6372a539162a6178c956.png" data-was-processed="true"></div></div>
+  </footer>
+  </div>
+  <script src="/javascripts/main.js"></script>
+  </body>
+  </html>
+  
+  
