--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <% if (pageName) { %>
-    <title>BestBags | <%= pageName %></title>
+    <title >Talabatak | <%= pageName %></title>
     <%} else {%>
     <title>Shopping Cart</title>
     <% } %>
@@ -46,7 +46,10 @@
       href="https://api.mapbox.com/mapbox-gl-js/v1.10.0/mapbox-gl.css"
       rel="stylesheet"
     />
+    <link rel="shortcut icon"
+    href="/images/icons8-W.png" />
   </head>
+
 
   <body>
     <div id="page-container">
