--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -70,8 +70,8 @@
 
       <div class="col-md-4 col-sm-12 col-xs-12 logo-container">
         <a href="/">
-          <img class="logo-img img-fluid" src="/images/shop-icon.png" alt="logo" />
-          <h4 class="logo-title">BestBags</h4>
+          <img class="logo-img img-fluid" src="/images/icons8.gif" alt="logo" />
+          <a class="name-logo"  href="/"><strong >Talabatak</strong><small class="allinOne">All In One</small></a>
         </a>
       </div>
 
