--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -89,32 +89,27 @@
             </a>
           </li>
           <% if (login) { %>
-          <li>
-            <a
-              class="dropdown-toggle"
-              href="#"
-              role="button"
-              data-toggle="dropdown"
-              aria-haspopup="true"
-              aria-expanded="false"
-            >
-              <i class="fas fa-user"></i> Welcome <%=currentUser.username%>
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="/user/profile">User Account</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="/user/logout">Logout</a>
-            </div>
-          </li>
-          <% } else {%>
-          <li>
-            <a href="/user/signup"> Sign Up</a>
-          </li>
-          <li>
-            <a href="/user/signin"> Sign In</a>
-          </li>
-          <% }%>
-        </ul>
+            <li>
+              <a
+                class="dropdown-toggle"
+                href="#"
+                role="button"
+                data-toggle="dropdown"
+                aria-haspopup="true"
+                aria-expanded="false"
+              >
+                <i class="fas fa-user"></i> Welcome <%=currentUser.username%>
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="/user/profile">Your Account</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="/home">Home</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="/user/logout">Logout</a>
+              </div>
+            </li>
+            <% } else {%>
+            <% }%>
+          </ul>
+        </div>
       </div>
-    </div>
-
