Modify the footer file

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,10 +1,5 @@
 
 <style>
-  .c-footer .ft-right .ft-right-payment .bank-img .c-img-con-m {
-      display: inline-block;
-      height: 24px;
-      margin-right: 10px;
-  }
   img {
       vertical-align: middle;
       border-style: none;
@@ -53,7 +48,9 @@
             <p>
               Contact Us (Central Office)<br>
               P : +1 999-999-9999<br>
-              M : contact@Talabatak.com</p>
+              M : contact@Talabatak.com<br>
+              <a style="color:white; " href="/pages/shipping-policy">Shipping policy</a><br>
+            </p>
           </div>
           <div class="footer__icons-box">
             <ul class="footer__icons flex">
