--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,23 +1,106 @@
 
 <style>
-  img {
-      vertical-align: middle;
-      border-style: none;
-      width: 50px;
-      margin-right: 1px;
-  }
-  .c-img-con-m  {
-      vertical-align: middle;
-      /* border-style: none; */
-      width: 50px;
-      margin-right: 1px;
-      /* top: inherit; */
-       padding-top: 10px; 
-  }
-  .ft-right-payment{
-    padding-top:30px ;
+ .footer_container {
+    margin-top: 20px;
+    position: inherit;
+    align-items: center;
+    justify-content: center;
+}
+a, .logo-container a, .right-nav a {
+    color: var(--black);
+    text-decoration: none !important;
+}
+.img-logo2 {
+    width: 55px;
+    height: 55px;
+    margin-left: 95px;
+    margin-right: 5px;
+    margin-bottom: 40px;
+}
+.name-logo2 {
+    display: inline-block;
+    margin-top: 100px;
+}
+.namelogo {
+    color: #fdf3f3;
+}
+.line {
+    width: 1111px;
+    height: 1px;
+    background: #ffffff;
+    mix-blend-mode: normal;
+    opacity: 0.1;
+    margin-bottom: 25px;
     margin-left: 100px;
-  }
+}
+.flex {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+#contact {
+    text-align: left;
+    vertical-align: middle;
+    align-items: center;
+    color: var(--ivory);
+    background-color: var(--black);
+    padding: 0px 1em 5em 1em;
+    margin-bottom: 50px;
+    height: 400px;
+    border-bottom: 5px var(--light-blue) solid;
+}
+.footer__contact {
+    width: 350px;
+    height: 30px;
+    padding: 0px;
+    margin: 0px;
+    mix-blend-mode: normal;
+    opacity: 0.5;
+    font-weight: bold;
+    color: #fdf3f3;
+}
+p {
+    margin-top: 0;
+    margin-bottom: 1rem;
+}
+.footer__contact span {
+    font-weight: normal;
+}
+.footer__icons-box {
+    align-self: start;
+}
+.socials {
+    margin-right: 16px;
+    width: 25px;
+    height: 25px;
+}
+.c-footer .ft-right .ft-right-payment .bank-img .c-img-con-m {
+    display: inline-block;
+    height: 24px;
+    margin-right: 10px;
+}
+img {
+    vertical-align: middle;
+    border-style: none;
+    width: 50px;
+    margin-right: 1px;
+}
+.c-img-con-m  {
+  
+    vertical-align: middle;
+    /* border-style: none; */
+    width: 50px;
+    margin-right: 1px;
+    /* top: inherit; */
+     padding-top: 50px; 
+
+}
+.ft-right-payment{
+  padding-top:20px ;
+}
+
   </style>
   <footer>
   
@@ -51,7 +134,7 @@
             </p>
           </div>
           <div class="footer__icons-box">
-            <ul class="footer__icons flex">
+            <ul class="footer__icons flex"   >
               <li>
                 <a href="https://www.facebook.com/"><img src="https://cdn-icons-png.flaticon.com/128/174/174848.png" alt="icon-facebook"
                     class="socials"></a>
@@ -78,6 +161,7 @@
   <div class="ft-right-payment" ><h6 tabindex="0" style="opacity: 0.5;">WE ACCEPT</h6> <div tabindex="0" role="contentinfo" class="bank-img" aria-label="We accept PayPal, Visa, Mastercard, Maestro, and more."><img aria-hidden="true" tabindex="-1" data-src="//img.ltwebstatic.com/images3_pi/2021/03/09/161528368123dd7a35ad8708b0dfc74b3630526891.png" class="c-img-con-m j-verlok-lazy loaded" data-lazy-src="//img.ltwebstatic.com/images3_pi/2021/03/09/161528368123dd7a35ad8708b0dfc74b3630526891.png" src="//img.ltwebstatic.com/images3_pi/2021/03/09/161528368123dd7a35ad8708b0dfc74b3630526891.png" data-was-processed="true"><img aria-hidden="true" tabindex="-1" data-src="//img.ltwebstatic.com/images2_pi/2018/06/06/15282732803587566708.png" class="c-img-con-m j-verlok-lazy loaded" data-lazy-src="//img.ltwebstatic.com/images2_pi/2018/06/06/15282732803587566708.png" src="//img.ltwebstatic.com/images2_pi/2018/06/06/15282732803587566708.png" data-was-processed="true"><img aria-hidden="true" tabindex="-1" data-src="//img.ltwebstatic.com/images2_pi/2018/06/06/15282732983375743706.png" class="c-img-con-m j-verlok-lazy loaded" data-lazy-src="//img.ltwebstatic.com/images2_pi/2018/06/06/15282732983375743706.png" src="//img.ltwebstatic.com/images2_pi/2018/06/06/15282732983375743706.png" data-was-processed="true"><img aria-hidden="true" tabindex="-1" data-src="//img.ltwebstatic.com/images2_pi/2018/06/06/1528273036537082707.png" class="c-img-con-m j-verlok-lazy loaded" data-lazy-src="//img.ltwebstatic.com/images2_pi/2018/06/06/1528273036537082707.png" src="//img.ltwebstatic.com/images2_pi/2018/06/06/1528273036537082707.png" data-was-processed="true"><img aria-hidden="true" tabindex="-1" data-src="//img.ltwebstatic.com/images2_pi/2018/06/06/15282731342688549608.png" class="c-img-con-m j-verlok-lazy loaded" data-lazy-src="//img.ltwebstatic.com/images2_pi/2018/06/06/15282731342688549608.png" src="//img.ltwebstatic.com/images2_pi/2018/06/06/15282731342688549608.png" data-was-processed="true"><img aria-hidden="true" tabindex="-1" data-src="//img.ltwebstatic.com/images2_pi/2018/06/06/1528273151799711689.png" class="c-img-con-m j-verlok-lazy loaded" data-lazy-src="//img.ltwebstatic.com/images2_pi/2018/06/06/1528273151799711689.png" src="//img.ltwebstatic.com/images2_pi/2018/06/06/1528273151799711689.png" data-was-processed="true"><img aria-hidden="true" tabindex="-1" data-src="//img.ltwebstatic.com/images3_pi/2021/02/05/161250863025fd3f042cab4a0148630b1708a6aefd.webp" class="c-img-con-m j-verlok-lazy loaded" data-lazy-src="//img.ltwebstatic.com/images3_pi/2021/02/05/161250863025fd3f042cab4a0148630b1708a6aefd.webp" src="//img.ltwebstatic.com/images3_pi/2021/02/05/161250863025fd3f042cab4a0148630b1708a6aefd.webp" data-was-processed="true"><img aria-hidden="true" tabindex="-1" data-src="//img.ltwebstatic.com/images3_pi/2021/02/05/161250868370a001fbd452127bffec8e8ab4488112.webp" class="c-img-con-m j-verlok-lazy loaded" data-lazy-src="//img.ltwebstatic.com/images3_pi/2021/02/05/161250868370a001fbd452127bffec8e8ab4488112.webp" src="//img.ltwebstatic.com/images3_pi/2021/02/05/161250868370a001fbd452127bffec8e8ab4488112.webp" data-was-processed="true"><img aria-hidden="true" tabindex="-1" data-src="//img.ltwebstatic.com/images2_pi/2018/06/06/15282731651043358291.png" class="c-img-con-m j-verlok-lazy loaded" data-lazy-src="//img.ltwebstatic.com/images2_pi/2018/06/06/15282731651043358291.png" src="//img.ltwebstatic.com/images2_pi/2018/06/06/15282731651043358291.png" data-was-processed="true"><img aria-hidden="true" tabindex="-1" data-src="//img.ltwebstatic.com/images3_pi/2020/12/04/160707548502d822d136d21e8166243abb60b15c41.png" class="c-img-con-m j-verlok-lazy loaded" data-lazy-src="//img.ltwebstatic.com/images3_pi/2020/12/04/160707548502d822d136d21e8166243abb60b15c41.png" src="//img.ltwebstatic.com/images3_pi/2020/12/04/160707548502d822d136d21e8166243abb60b15c41.png" data-was-processed="true"><img aria-hidden="true" tabindex="-1" data-src="//img.ltwebstatic.com/images2_pi/2018/06/06/15282733431754785346.png" class="c-img-con-m j-verlok-lazy loaded" data-lazy-src="//img.ltwebstatic.com/images2_pi/2018/06/06/15282733431754785346.png" src="//img.ltwebstatic.com/images2_pi/2018/06/06/15282733431754785346.png" data-was-processed="true"><img aria-hidden="true" tabindex="-1" data-src="//img.ltwebstatic.com/images3_pi/2019/11/04/15728337019856d004cc3b6372a539162a6178c956.png" class="c-img-con-m j-verlok-lazy loaded" data-lazy-src="//img.ltwebstatic.com/images3_pi/2019/11/04/15728337019856d004cc3b6372a539162a6178c956.png" src="//img.ltwebstatic.com/images3_pi/2019/11/04/15728337019856d004cc3b6372a539162a6178c956.png" data-was-processed="true"></div></div>
   </footer>
   </div>
+  
   <script src="/javascripts/main.js"></script>
   </body>
   </html>
